--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@examples-query-react/basic",
+  "name": "rtk-short",
   "private": true,
   "version": "1.0.0",
-  "description": "getting-started-basic",
+  "description": "reduce verbosity of redux",
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
@@ -18,7 +18,6 @@
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-redux": "7.1.9",
-    "msw": "^0.30.0",
     "typescript": "~4.2.4"
   },
   "eslintConfig": {
